rust/core/src/lexis/snapshots/lucid_suggest_core__lexis__matching__tests__match_text_best_rword-2.snap
---
source: src/lexis/matching.rs
expression: "text_match(&r.to_ref(), &q.to_ref())"
---
[
    WordMatch { [rrr]rr /0/ [qqq].. },
]
