rust/core/src/lexis/snapshots/lucid_suggest_core__lexis__matching__tests__match_text_best_rword.snap
---
source: src/lexis/matching.rs
expression: "text_match(&r.to_ref(), &q.to_ref())"
---
[
    WordMatch { [rrr] /0/ [qqq] },
]
