rust/core/src/lexis/snapshots/lucid_suggest_core__lexis__matching__tests__match_text_intersection.snap
---
source: src/lexis/matching.rs
expression: "text_match(&r.to_ref(), &q.to_ref())"
---
[
    WordMatch { [rrrrrrr] /1/ [qqqqqqq] },
    WordMatch { [rrrrr]r /1/ [qqqq].. },
]
