rust/core/src/lexis/snapshots/lucid_suggest_core__lexis__matching__tests__match_text_regression_best_match.snap
---
source: src/lexis/matching.rs
expression: r.matches(&q)
---
[
    WordMatch { [rrrrr]r /0/ [qqqqq].. },
]
