rust/core/src/lexis/snapshots/lucid_suggest_core__lexis__matching__tests__match_text_singleton_equality.snap
---
source: src/lexis/matching.rs
expression: r.matches(&q)
---
[
    WordMatch { [rrrrrrr] /0/ [qqqqqqq] },
]
