rust/core/src/lexis/snapshots/lucid_suggest_core__lexis__matching__tests__match_word_full_stem.snap
---
source: src/lexis/matching.rs
expression: "word_match(&r.to_ref(), &q1.to_ref())"
---
Some(
    WordMatch { [rrrrrrr]r /0/ [qqqqqqqq] },
)
