rust/core/src/lexis/snapshots/lucid_suggest_core__lexis__matching__tests__match_word_partial_fuzzy_deletion.snap
---
source: src/lexis/matching.rs
expression: r.matches(&q)
---
Some(
    WordMatch { [rrrrr]rr /1/ [qqqq].. },
)
